# QQ_Bot

./: .env.prod  README.md  bot.py  launch.bat  pyproject.toml
data/Presets/: ChatGPT.json  猫娘.json
src/: update.md
src/plugins/: answer.py  buttton_msg.py  chat.py  chat_none.py  gif.py  group_id  id.py  image.py  jianyan.py  luxun.py  mention.py  mingyan.py  muteuser.py  sent_images.txt  shuangseqiu.py  spark_history.json  test.py  trail.py  update.py  url.py  weather.py  wife.py
src/plugins/test/: test.py
src/plugins/梗图/: ren - 副本 - 副本.bat  ren - 副本.bat  ren.bat
