[project]
name = "nb_test"
version = "0.1.0"
description = "nb_test"
readme = "README.md"
requires-python = ">=3.9, <4.0"

[tool.nonebot]
adapters = [
    { name = "QQ", module_name = "nonebot.adapters.qq" }
]
#plugins = ["nonebot_plugin_chatgpt_on_qq"]
plugin_dirs = ["src/plugins"]
builtin_plugins = ["echo"]
